--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -21,6 +21,7 @@ html,
 body {
   width: 100%;
   min-height: 100%;
+  height: 100%;
   background: var(--app-background);
   color: var(--app-text);
 }
